added break for h1 tag in html, added and changed hover and color for button

--- a/colorGame.html
+++ b/colorGame.html
@@ -6,7 +6,13 @@
 	<link rel="stylesheet" href="colorGame.css">
 </head>
 <body>
-	<h1>The Great <span id=colorDisplay>RGB</span> color game</h1>
+	<h1>
+		The Great 
+		<br>
+		<span id=colorDisplay>RGB</span> 
+		<br>
+		Color game
+	</h1>
 
 <div id="stripe">
 	<button id="reset">New Colors</button>
